--- a/pages/testimonials/testimonial.css
+++ b/pages/testimonials/testimonial.css
@@ -40,17 +40,18 @@
     margin-right: 30px;
 }
 
-.navbar a {
+.navbar-rest a {
     color: black;
     text-decoration: none;
     font-size: 20px;
 }
 
 .startcamp {
-    color: white !important;
     background-color: rgb(123, 3, 3);
-    border-radius: 15px;
-    padding: 10px;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 .testimonial_container h1 {
@@ -59,13 +60,14 @@
 
 .testimonial_container hr {
     margin-left: 120px;
+    margin-bottom: 20px;
     width: 75%;
 }
 
 .stories {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
     margin: 0 60px;
 }
 
@@ -73,13 +75,12 @@
     display: flex;
     height: 300px;
     overflow: hidden;
-    border: 2px #bb4040 solid;
     border-radius: 10px;
 }
 
 .img-container {
     margin: 0 auto;
-    width: 300px;
+    width: 400px;
     height: 100%;
     display: flex;
     justify-content: center;
